# lead_service

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 951f62afb807_create_leads_and_users.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  leads.py
backend/app/core/: config.py  security.py
backend/app/db/: types.py
backend/app/models/: __init__.py  lead.py  user.py
backend/app/schemas/: auth.py  lead.py
backend/app/services/: auth.py  email.py  leads.py  storage.py
backend/tests/: conftest.py  test_auth_api.py  test_auth_service.py  test_email_service.py  test_leads_api.py  test_leads_service.py  test_models.py  test_security.py  test_storage.py
docs/: AGENT_USAGE.md  design.md
docs/superpowers/plans/: 2026-06-27-lead-service.md
docs/superpowers/specs/: 2026-06-27-lead-service-design.md
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/leads/: page.tsx
frontend/app/leads/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: LeadForm.tsx  StateBadge.tsx
frontend/lib/: api.ts  auth.ts  validation.test.ts  validation.ts
